--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,7 @@ body {
     font-style: italic;
 }
 div {
+    text-align: center;
     background-color: none;
     width: 50%;
     height: 50%;
@@ -35,7 +36,6 @@ p {
 li {
     display: inline;
     margin-right: 15%;
-    /* border-color: crimson silver crimson silver; */
 }
 ul {
     border: 3px solid;
