--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ body {
     font-weight: bold;
     font-style: italic;
 }
-div {
+.border {
     text-align: center;
     background-color: none;
     width: 50%;
@@ -26,6 +26,7 @@ div {
     /* padding: 10px; */
     border-color: crimson grey crimson grey;
     border-radius: 10px;
+    margin: 20px auto 20px auto;
 }
 p {
     color: gray;
