--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .jumbotron {
     color: #a32637;
     margin-bottom: 0px;
@@ -16,4 +20,8 @@
     background-color: #ffffff;
     padding: 8px;
     border-radius: 6px;
+}
+
+.jumbotron > h1 {
+    font-family: 'Rock Salt', cursive;
 }
